--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -75,6 +75,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_border2"
             android:text="Save"/>
     </LinearLayout>
     <LinearLayout
@@ -122,6 +123,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_border2"
             android:text="Save"/>
     </LinearLayout>
 </LinearLayout>
