--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="@color/colorPrimary"
+    android:background="@color/primary"
     android:gravity="center"
     tools:context="com.gighub.app.ui.activity.AboutActivity">
     <ImageView
