--- a/app/src/main/res/layout/fragment_discover_musician_main.xml
+++ b/app/src/main/res/layout/fragment_discover_musician_main.xml
@@ -70,12 +70,13 @@
             android:layout_column="1"
             android:text="Date : "
             />
-        <android.support.v7.widget.AppCompatButton
-            android:layout_gravity="fill_horizontal"
+        <Button
+            android:layout_gravity="center"
             android:layout_row="6"
             android:layout_column="1"
+            android:layout_width="wrap_content"
             android:text="Date Time"
-            />
+            android:background="@drawable/button_border2" />
 
         <android.support.v4.widget.Space
             android:layout_row="7"
@@ -141,20 +142,20 @@
             android:text="Select Genres"
             android:focusable="false"/>
 
-
-
         <android.support.v4.widget.Space
             android:layout_row="12"
             android:layout_column="0"
             android:layout_columnSpan="2"
             android:layout_height="100dp"
             android:layout_gravity="fill_horizontal"/>
-        <android.support.v7.widget.AppCompatButton
+        <Button
             android:id="@+id/btn_search"
             android:layout_row="14"
             android:layout_columnSpan="2"
-            android:layout_gravity="fill_horizontal"
+            android:layout_gravity="center_vertical"
+            android:layout_width="match_parent"
             android:text="Search"
+            android:background="@drawable/button_border2"
             android:layout_column="0" />
 
     </GridLayout>
