--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="colorAccent2">#dddddd</color>
     <color name="colorAccent3">#aaaaaa</color>
     <color name="colorTextDark">#000000</color>
+    <color name="primary">#505050</color>
+    <color name="primaryDark">#333333</color>
+    <color name="primaryButton">#ff4400</color>
+    <color name="primaryButton2">#ff9955</color>
 </resources>
