--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,9 +11,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <!--<item name="buttonPrimary">@color/primaryButton</item>-->
     </style>
     <style name="AppTheme.NoActionBar.Child">
         <item name="android:windowActionBar">false</item>
@@ -29,5 +30,9 @@
         <item name="android:buttonTint">@color/colorAccent</item>
         <item name="android:backgroundTint">@color/colorAccent</item>
         <item name="android:textColorHint">@color/colorAccent</item>
+    </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
     </style>
 </resources>
