--- a/app/src/main/res/layout/activity_register_as_musician.xml
+++ b/app/src/main/res/layout/activity_register_as_musician.xml
@@ -26,7 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="@color/colorAccent">
-            <android.support.design.widget.TextInputEditText
+            <EditText
+                android:id="@+id/txt_name_musician_register"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorAccent"
@@ -38,7 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="@color/colorAccent">
-            <android.support.design.widget.TextInputEditText
+            <EditText
+                android:id="@+id/txt_email_musician_register"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorAccent"
@@ -50,7 +52,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="#FFFFFF">
-            <android.support.design.widget.TextInputEditText
+            <EditText
+                android:id="@+id/txt_password_musician_register"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorAccent"
@@ -62,7 +65,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="#FFFFFF">
-            <android.support.design.widget.TextInputEditText
+            <EditText
+                android:id="@+id/txt_confirmationpassword_musician_register"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorAccent"
@@ -79,6 +83,7 @@
 
 
         <CheckBox
+            android:id="@+id/cbx_agree_termcondition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorAccent"
@@ -94,7 +99,7 @@
         android:layout_marginTop="20dp"
         android:gravity="end">
         <Button
-            android:id="@+id/btnCancelMusicianRegister"
+            android:id="@+id/btn_cancel_musician_register"
             android:elevation="4dp"
             android:textColor="@color/colorAccent"
             android:layout_width="wrap_content"
@@ -107,7 +112,7 @@
         <Button
             android:textColor="@color/colorAccent"
             android:elevation="4dp"
-            android:id="@+id/btnRegisterMusicianRegister"
+            android:id="@+id/btn_register_musician_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
