--- a/app/src/main/res/layout/activity_login_as_organizer.xml
+++ b/app/src/main/res/layout/activity_login_as_organizer.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:textColorHint="@color/colorAccent">
         <EditText
+            android:id="@+id/et_email_login_org"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorAccent"
@@ -43,6 +44,7 @@
         android:layout_height="wrap_content"
         android:textColorHint="@color/colorAccent">
         <EditText
+            android:id="@+id/et_password_login_org"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorAccent"
@@ -58,7 +60,7 @@
         android:layout_marginTop="20dp"
         android:gravity="end">
         <Button
-            android:id="@+id/btnCancelOrganizerLogin"
+            android:id="@+id/btn_cancel_login_org"
             android:elevation="4dp"
             android:textColor="@color/colorAccent"
             android:layout_width="wrap_content"
@@ -69,9 +71,9 @@
             android:background="@drawable/button_border"
             android:text="@string/cancel" />
         <Button
+            android:id="@+id/btn_login_login_org"
             android:textColor="@color/colorAccent"
             android:elevation="4dp"
-            android:id="@+id/btnLoginOrganizerLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
