--- a/app/src/main/res/layout/fragment_discover_musician_main.xml
+++ b/app/src/main/res/layout/fragment_discover_musician_main.xml
@@ -71,6 +71,7 @@
             android:text="Date : "
             />
         <Button
+            android:id="@+id/btn_date_search"
             android:layout_gravity="center"
             android:layout_row="6"
             android:layout_column="1"
@@ -134,7 +135,8 @@
             android:layout_column="1"
             android:text="Music Genre"
             />
-        <android.support.design.widget.TextInputEditText
+        <EditText
+            android:id="@+id/et_select_genre"
             android:layout_gravity="fill_horizontal"
             android:layout_row="11"
             android:layout_column="1"
