--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -30,6 +30,14 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical">
+        <com.github.siyamed.shapeimageview.CircularImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_person_black_48dp"
+            app:siBorderWidth="2dp"
+            app:siBorderColor="@color/colorAccent3"
+            android:layout_margin="5dp"
+            android:layout_gravity="center_horizontal"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
