--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -17,13 +17,16 @@
     <item android:id="@+id/action_login"
         android:title="@string/login"
         app:showAsAction="never"/>
-    <!--<item android:id="@+id/action_about"-->
-        <!--android:title="About"-->
-        <!--app:showAsAction="never"/>-->
+    <item android:id="@+id/action_create_band"
+        android:title="Create Group / Band"
+        app:showAsAction="never"/>
+    <item android:id="@+id/action_bands"
+        android:title="Your Band(s)"
+        app:showAsAction="never"/>
     <item android:id="@+id/action_booking_list"
         android:title="@string/booking_list"
         android:icon="@drawable/ic_book_white_24dp"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
     <item android:id="@+id/action_account"
         android:title="@string/account"
         android:icon="@drawable/ic_person_white_24dp"
