--- a/app/src/main/res/layout/activity_login_as.xml
+++ b/app/src/main/res/layout/activity_login_as.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/or"
-            android:textSize="12pt"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:textAlignment="center"
