--- a/app/src/main/res/layout/activity_musician.xml
+++ b/app/src/main/res/layout/activity_musician.xml
@@ -22,6 +22,7 @@
         android:minHeight="0dp">
 
         <ImageView
+            android:id="@+id/img_img_profile_musicianactivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/ava"
