--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -23,6 +23,12 @@
     <item android:id="@+id/action_bands"
         android:title="Your Band(s)"
         app:showAsAction="never"/>
+    <item android:id="@+id/action_create_gig"
+        android:title="Create Gig"
+        app:showAsAction="never"/>
+    <item android:id="@+id/action_yourgigs"
+        android:title="Your Gig(s)"
+        app:showAsAction="never"/>
     <item android:id="@+id/action_booking_list"
         android:title="@string/booking_list"
         android:icon="@drawable/ic_book_white_24dp"
